--- a/plugins.css
+++ b/plugins.css
@@ -97,3 +97,10 @@
   margin-left:50px;
   margin-right:50px;
 }
+
+.CodeMirror {
+  min-height:400px; 
+  border: thin solid gray;
+  margin-top:10px;
+  
+}
